# learn_jax

./: .gitignore  OPI_HPI.ipynb  README.md  VFI.ipynb  aiyagari_jax.ipynb  aiyagari_jax.qmd  egm.qmd  egm.quarto_ipynb  ifp_egm.ipynb  keras_jax.qmd  opt_savings_2.ipynb  pyproject.toml
