[project]
name = "learn-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "ipykernel>=7.1.0",
    "jax>=0.8.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "optimistix>=0.0.11",
    "pandas>=2.3.3",
    "pip>=25.3",
    "plotly>=6.5.0",
    "pyyaml>=6.0.3",
    "quantecon>=0.10.1",
]

